# Terrain-Render-Test

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: brush-comp.glsl  cdlod-frag.glsl  cdlod-vert.glsl  debugline-frag.glsl  debugline-vert.glsl  frag.glsl  gui-frag.glsl  gui-vert.glsl  imgui-frag.glsl  vert.glsl
assets/shaders/cdlod/: frag.glsl  vert.glsl
assets/shaders/compute/heightmap/: regen_normals.glsl  terraform.glsl
assets/shaders/compute/painting/: paintbrush.glsl
assets/shaders/engine/effects/: screen_gen_vertex.glsl
assets/shaders/engine/imgui/: fragment_texarray.glsl  vertex.glsl
assets/shaders/post_processing/: vector_draw.glsl
src/: heightmap.cpp  heightmap.hpp  main.cpp  road_display_manager.cpp  road_display_manager.hpp  scene.cpp  scene.hpp  terrain_painter.cpp  terrain_painter.hpp  theme.cpp  theme.hpp
src/cdlod/: lod_tree.cpp  lod_tree.hpp  structures.hpp  terrain_manager.cpp  terrain_manager.hpp
src/dynamic_meshes/: road.cpp  road.hpp
src/node/: edge.cpp  edge.hpp  forward.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp
src/tools/: event.cpp  event.hpp  node_tool.cpp  node_tool.hpp  painter_tool.cpp  painter_tool.hpp  terraform_tool.cpp  terraform_tool.hpp  tool_base.cpp  tool_base.hpp
src/utils/: circular_buffer.hpp  easing.hpp  gizmos.cpp  gizmos.hpp  instance_buffer.hpp  instance_buffer.inl  intersection.cpp  intersection.hpp  overhead_camera.cpp  overhead_camera.hpp
src/vector/: arc_line.cpp  arc_line.hpp  bezier_curve.cpp  bezier_curve.hpp  circle.cpp  circle.hpp  common.cpp  common.hpp  internal.hpp  line.cpp  line.hpp  vector_graphics.cpp  vector_graphics.hpp
tools/heightmap_gen/: main.cpp
tools/vector_test/: main.cpp
